--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,8 +2,9 @@
     <head>
         <meta charset="utf8">
         <title> First Git Project </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1> First
+        <h1> First Git Project</h1>
     </body>
 </html>
