--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1> First Git Project</h1>
+        <p>Depuis les années 2010, il s’agit du logiciel de gestion de versions le plus populaire dans le développement logiciel et web, qui est utilisé par des dizaines de millions de personnes, sur tous les environnements (Windows, M</p>
+        <p>Git est un logiciel de gestion de versions décentralisé. C'est un logiciel libre et gratuit, créé en 2005 par Linus Torvalds, auteur du noyau Linux, et distribué selon les termes de la licence publique générale GNU version 2. Le principal contributeur actuel de Git, et ce depuis plus de 16 ans, est Junio C Hamano.</p>
     </body>
 </html>
